# NIC-Stats

./: .gitignore  CMakeLists.txt  README.md  mailing-list.txt  main.cpp  resources.qrc  test.cpp  test.h
.github/workflows/: ci-cd.yml  ci-cd.yml.in  windows-build.yml  windows-build.yml.in
cmake/: FindQxlsx.cmake
common/: error.cpp  error.h  reader.cpp  reader.h  writer.cpp  writer.h
enveloppe/: enveloppe.cpp  enveloppe.h  enveloppereader.cpp  enveloppereader.h  enveloppewriter.cpp  enveloppewriter.h  record.cpp  record.h
generators/: enveloppegenerator.cpp  enveloppegenerator.h  filegenerator.cpp  filegenerator.h
kit/: abstractkitmanager.cpp  abstractkitmanager.h  kit.cpp  kit.h  kitmanager.cpp  kitmanager.h  kitmanagerdialog.cpp  kitmanagerdialog.h  kitmanagerdialog.ui  kitsmodel.cpp  kitsmodel.h
notes/: RELEASE-1.0.txt  RELEASE-1.1.txt  RELEASE-1.2.md  RELEASE-1.3.md  RELEASE-1.4.md
package/: package.cpp  package.h
resources/: STATISTIQUES.xlsx
statistics/: statisticscalculator.cpp  statisticscalculator.h  statisticswritter.cpp  statisticswritter.h
stats-wizard/: statisticscomputingwizard.cpp  statisticscomputingwizard.h  statisticscomputingwizard.ui  statisticsprocessingpage.cpp  statisticsprocessingpage.h  statisticsprocessingpage.ui  statisticssetuppage.cpp  statisticssetuppage.h  statisticssetuppage.ui
